set permgen size in surefire plugin to prevent oome permgen error
git-svn-id: https://svn.apache.org/repos/asf/archiva/trunk@1418234 13f79535-47bb-0310-9956-ffa450edef68